frontend/src/css/top.css
/* ... */
/* Ensure the background image covers the entire item */
.item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.item:hover {
  border-radius: 0px;
}

/* Show the title-container and change the content background color on hover */
.item:hover .title-container {
  opacity: 1; /* Display the title-container on hover */
}

.item:hover .item .content {
  background-color: rgba(
    0,
    0,
    0,
    0.9
  ); /* Semi-transparent background on hover */
}

.item-1 {
  grid-area: 1 / 1 / 4 / 6;
}
.item-2 {
  grid-area: 1 / -7 / 4 / -4;
}

.item-3 {
  grid-area: 4 / 1 / 7 / -9;
}

.item-4 {
  grid-area: 4 / -9 / 7 / -4;
}
.lfy-title {
  align-self: center;
  box-shadow: 5px 5px #f1f1f1;
  border: 2px solid #f1f1f1;
  padding: 10px;
}
.latest-artcile-title:hover {
  box-shadow: 5px 5px #1f1f1f;
  border: 2px solid #1f1f1f;
  background-color: #868e97;
  color: #1f1f1f;
}
.item-5 {
  grid-area: 1 / -4 / -3 /-1;
  border-radius: 8px;
  background-color: #1f1f1f;
  color: #f1f1f1;
  font-family: "Excon";

  box-shadow: 5px 5px 20px #868e97;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  overflow-y: scroll;

  gap: 1rem;
}

.tool3{
  font-family: 'Author';
  font-weight: bold;
  text-shadow: 2px 2px #ca212a;
  text-align: center;
  font-size: 10rem;
  align-self: center;
}
.tdt-title{
  text-shadow: none;
}

.news-ticker {
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  text-align: center;
  font-family: "Excon";
  align-self: center;
  display: flex;
  padding: 0px;
  
  align-items: center;
  min-height: 8rem;
  margin-bottom: 0.5rem;
  
  
}

.anchor{
  position: absolute;
  z-index: 2;
  background-color: #ca212a;
  border: 2px solid #1f1f1f;
  box-shadow: -2px 2px #1f1f1f;
  font-family: 'Excon';
  display: flex;
  justify-content: center;
  min-height: 3rem;
  min-width: 6rem;
 font-weight: bold;
  text-align: center;
  color:#f9f9f9;
}

.news-ticker ul:hover {
  animation-play-state: paused;
  
}
.news-ticker ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  
  display: inline-block;
  animation: marquee 120s linear infinite; /* Adjust duration as needed */
  transition: animation 10s ease;
}

.news-ticker li {
  display: inline-block;
  text-align: center;
  margin-right: 20px; /* Adjust spacing between titles */
}

.ticker-title{
  border: 2px solid #1f1f1f;
  border-radius: 4px;
  box-shadow: 2px 2px #1f1f1f;
  padding: 10px;
  transition: all 1s;
}

.ticker-title:hover{
  color: #f9f9f9;
  background-color: #1f1f1f;
}
@keyframes marquee {
  0% { transform: translateX(100%); }
  100% { transform: translateX(-100%); }
}

.item-5::-webkit-scrollbar {
  width: 0.5vw;
  border-radius: 8px;
}
.item-5::-webkit-scrollbar-thumb {
  background-color: #868e976b;
  transition: all 2s;
  border-radius: 8px;
}
.item-5::-webkit-scrollbar-thumb:hover {
  background-color: #f1f1f1;
}

.item-5::-webkit-scrollbar-track {
  background-color: #1f1f1f;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}
.latest-for-you-list {
  padding-left: 1rem;
}
.latest-artcile-title {
  text-align: left;
  font-size: 1.1rem;
  transition: all 0.2s;
  border-bottom: 2px solid #868e97;
}
.item-6 {
  grid-area: -1 /-1 /-3 / -4;
  background-color: #1f1f1f;
  font-family: "Excon";

  display: flex;
  flex-direction: column;
  align-items: center;
  color: #f9f9f9;
  padding: 10px;
  border-radius: 8px;
  box-shadow: 3px 3px  1px  #ca212a;
}
.sign-up-box-news {
  margin: 0px;
}
.sign-up-box-notif {
  margin: 0px;
  text-align: center;
}

.mail {
  margin-top: 2rem;
  justify-self: center;
}
.email-box {
  min-width: 96%;
  min-height: 2rem;
  background-color: #f1f1f1;

  color: #1f1f1f;
  border: none;
  font-family: "Excon";
  border-radius: 0px;
}

.btn-email {
  border: none;
  border-radius: 0px;
}

#scroller-business{

}


@media only screen and (max-width: 1148px) {
  .container {
    grid-template-columns: repeat(11, 64px);
    grid-template-rows: repeat(6, 64px);
  }

  .sign-up-box-news{
    font-size: 1.3rem;
  }

  .title1{
    font-size: 2rem;
  }

  .sign-up-box-title{
    font-size: 0.7rem;
  }

  .mail{
    margin-top: 0.5rem;
    width: 80%;
    align-self: center;
    margin-right: 1.3rem;
  }

  .local{
    grid-template-columns: 20% 20% 20% 20%;
    max-width: 100%;
    justify-content: flex-start;
  }

  .lfy-title{
    font-size: 1rem;
  }
  .latest-artcile-title{
    font-size: 1rem;
  }

  
}

@media only screen and (max-width: 866px) {
  .container {
    grid-template-columns: repeat(5, 100px);
    grid-template-rows: repeat(4, 100px);
  }

  .item-1 {
    grid-area: 1 / 1 / 3 / 4;
  }
  .item-2 {
    grid-area: 1 / -3 / -3 / -1;
  }

  .item-3 {
    grid-area: 3/ 1 / 5 / -4;
  }

  .item-4 {
    grid-area: 3 / 3 / 5 / 6;
  }
}
/* ... */

